--- a/style.css
+++ b/style.css
@@ -44,14 +44,16 @@ header > h1{
     margin-top: 0px;
     font-weight: bold;
 }
+
 main{
     padding-left: 50px;
-
+    max-width: 100%;
+    min-width: none;
 }
 main p{
     font-family: var(--fontepoema);
-    font-size: 33px;
-    width: 400px;
+    font-size: 5vw;
+    width: 50vw;
     margin-bottom: 80px;
 }
 #joaninha{
@@ -68,7 +70,7 @@ main p{
 .imagem{
     margin-left: 50px;
     background-color: rgba(0, 0, 0, 0.24);
-    width: 400px;
+    max-width: 400px;
     color: white;
     padding: 10px;
     
