--- a/style.css
+++ b/style.css
@@ -17,7 +17,8 @@ header{
     background-color: black;
     color: white;
     padding: 60px;
-    margin-bottom: 100px;
+    margin-bottom: 80px;
+    padding-bottom: 47px;
 }
 a{
     text-decoration: none;
@@ -32,7 +33,7 @@ a:active{
 }
 header > p{
     text-align: center;
-    font-size: 100%;
+    font-size: 16px;
 }
 header > p a{
     font-weight: bold;
@@ -40,9 +41,10 @@ header > p a{
 header > h1{
     font-family: var(--fontetitulo);
     text-align: center;
-    font-size: 96px;
+    font-size: 9vw;
     margin-top: 0px;
-    font-weight: bold;
+    font-weight: 700;
+
 }
 
 main{
@@ -52,8 +54,8 @@ main{
 }
 main p{
     font-family: var(--fontepoema);
-    font-size: 5vw;
-    width: 50vw;
+    font-size: 3.5vw;
+    width: 39vw;
     margin-bottom: 80px;
 }
 #joaninha{
@@ -69,12 +71,12 @@ main p{
 }
 .imagem{
     margin-left: 50px;
-    background-color: rgba(0, 0, 0, 0.24);
-    max-width: 400px;
+    background-color: rgba(0, 0, 0, 0.356);
+    max-width: 39vw;
+    min-width: none;
     color: white;
-    padding: 10px;
-    
-
+    padding: 15px;
+    padding-left: 20px;
 }
 .imagem > p{
     margin-bottom: 0px;
