--- a/style.css
+++ b/style.css
@@ -1,103 +1,79 @@
 @charset "UTF-8";
-@import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700;900&display=swap');
-
-@import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Passion+One&family=Sriracha&display=swap');
 
 :root{
-    --fontepadrao:  Verdana, Geneva, Tahoma, sans-serif;
+    --fontepadrao: Verdana, Geneva, Tahoma, sans-serif;
     --fontetitulo: 'Passion One', cursive;
-    --fontepoema: 'Sriracha', cursive;
+    --fontecodel: 'Sriracha', cursive;
 }
 *{
-    font-family: var(--fontepadrao);
     margin: 0px;
     padding: 0px;
+    font-family: var(--fontepadrao);
+}
+html, body{
+    min-height: 100vh;
 }
 header{
     background-color: black;
     color: white;
-    padding: 60px;
-    margin-bottom: 80px;
-    padding-bottom: 47px;
+    text-align: center;
+    margin-bottom: 4em;
+}
+header > h1{
+    padding-top: 32px;
+    font-family: var(--fontetitulo);
+    font-variant: small-caps;
+    font-weight: normal;
+    font-size: 9vw;
 }
 a{
     text-decoration: none;
     color: white;
-    font: bold;
+    font-weight: bold;
 }
 a:hover{
     text-decoration: underline;
 }
-a:active{
-    color: rgb(112, 30, 0);
-}
 header > p{
-    text-align: center;
-    font-size: 16px;
+    padding-bottom: 32px;
 }
-header > p a{
-    font-weight: bold;
+section{
+    padding-left: 1.5em;
+    padding-bottom: 3vh;
+    padding-top: 3vh;
 }
-header > h1{
-    font-family: var(--fontetitulo);
-    text-align: center;
-    font-size: 9vw;
-    margin-top: 0px;
-    font-weight: 700;
-
-}
-
-main{
-    padding-left: 50px;
-    max-width: 100%;
-    min-width: none;
-}
-main p{
-    font-family: var(--fontepoema);
+section > p{
+    font-family: var(--fontecodel);
     font-size: 3.5vw;
-    width: 39vw;
-    margin-bottom: 80px;
-}
-#joaninha{
-    background-image: url(imagens/background001.jpg);
-    background-position: center top;
-    background-size: cover;
-    background-attachment: fixed;
-
-    margin-left: -50px;
-    padding: 100px 0px 100px 0px;
-    margin-bottom: 100px;
-    margin-top: 100px;
-}
-.imagem{
-    margin-left: 50px;
-    background-color: rgba(0, 0, 0, 0.356);
-    max-width: 39vw;
-    min-width: none;
-    color: white;
-    padding: 15px;
-    padding-left: 20px;
+    line-height: 2em;
 }
 .imagem > p{
-    margin-bottom: 0px;
+    background-color: rgba(0, 0, 0, 0.507);
+    color: white;
+    display: inline-block;
+    padding: 1em;
+    
 }
-#papeis{
-    background-image: url(imagens/background002.jpg);
-    background-position: center top;
+.imagem{
+    background-color: gray;
+    padding: 2em;
+
+}
+#img01{
+    background-image: url(imagens/background001.jpg);
+    background-position: right center;
     background-size: cover;
     background-attachment: fixed;
-
-    margin-left: -50px;
-    padding: 100px 0px 100px 0px;
-    margin-bottom: 100px;
-    margin-top: 100px;
+}
+#img02{
+    background-image: url(imagens/background002.jpg);
+    background-position: right center;
+    background-size: cover;
+    background-attachment: fixed;
 }
 footer{
     background-color: black;
-    color: white;
     text-align: center;
-    padding: 5px;
-}
-footer a{
-    font-size: 18px;
+    color: white;
 }
